# b3-series

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: run_test.yml
b3_series/: config.py  io.py  pandas.py  sync_parquets.py  sync_series.py
examples/: sync.py
tests/: test_pandas.py  test_sync_parquets.py  test_sync_series.py
